<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="419dp"
        android:layout_height="409dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chess_title"
        app:layout_constraintVertical_bias="0.377">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/daily_puzzle"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/menu_light_sea_green"
                    android:drawableTop="@drawable/ic_white_bishop_for_menu"
                    android:text="@string/fetch_daily_puzzle"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/history"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/menu_light_camel"
                    android:drawableTop="@drawable/ic_white_king_for_menu"
                    android:text="@string/history"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/about_text"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/menu_light_salmon"
                    android:drawableTop="@drawable/ic_white_queen_for_menu"
                    android:text="@string/about_menu"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/online"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/menu_light_asparagus"
                    android:drawableTop="@drawable/ic_white_rook_for_menu"
                    android:text="@string/online"
                    android:textStyle="bold" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/chess_title"
        android:layout_width="371dp"
        android:layout_height="75dp"
        android:layout_marginTop="72dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>