<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/about_text_yau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:singleLine="false"
        android:text="@string/about_content"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <ImageView
        android:id="@+id/github_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/github_icon"
        app:layout_constraintEnd_toEndOf="@+id/about_text_yau"
        app:layout_constraintStart_toStartOf="@+id/about_text_yau"
        app:layout_constraintTop_toBottomOf="@+id/about_text_yau"
        app:srcCompat="@mipmap/ic_github" />


    <TextView
        android:id="@+id/about_lichess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:singleLine="false"
        android:text="@string/about_lichess"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <ImageView
        android:id="@+id/lichess_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="216dp"
        android:contentDescription="@string/github_icon"
        app:layout_constraintEnd_toEndOf="@+id/about_text_yau"
        app:layout_constraintStart_toStartOf="@+id/about_text_yau"
        app:layout_constraintTop_toBottomOf="@+id/about_text_yau"
        app:srcCompat="@mipmap/ic_lichess" />

</androidx.constraintlayout.widget.ConstraintLayout>